--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
           context: .
           push: false
           load: true
-          tags: xrechnung-validator:test
+          tags: xrechnung-kosit-validator:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -80,12 +80,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build image for scanning
-        run: docker build -t xrechnung-validator:scan .
+        run: docker build -t xrechnung-kosit-validator:scan .
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.33.1
         with:
-          image-ref: xrechnung-validator:scan
+          image-ref: xrechnung-kosit-validator:scan
           format: 'sarif'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
